[안미정] - post method 연습문제2 풀이 - html 부트스트랩 cdn 추가 - post method 연습문제1 html br추가 수정

--- a/src/main/webapp/servlet/test09.html
+++ b/src/main/webapp/servlet/test09.html
@@ -11,7 +11,8 @@
 		<br>
 		<label>자기 소개서</label>
 		<br>
-		<textarea name="introduce"></textarea>
+		<textarea name="introduce" cols="50" rows="10"></textarea>
+		<br>
 		<button type="submit">지원</button>
 	</form>
 
