[안미정] - 선생님 풀이 추가

--- a/src/main/webapp/servlet/test09.html
+++ b/src/main/webapp/servlet/test09.html
@@ -7,6 +7,7 @@
 <body>
 	<h2>입사 지원</h2>
 	<form method="post" action="/servlet/test09">
+		<label>이름 : </label>
 		<input type="text" name="name">
 		<br>
 		<label>자기 소개서</label>
