--- a/src/main/webapp/servlet/test10.html
+++ b/src/main/webapp/servlet/test10.html
@@ -12,8 +12,8 @@
 <body>
 	<h3>로그인</h3>
 	<form method="post" action="/servlet/test10">
-		<input type="text" name="inputId" class="form-control w-25">
-		<input type="password" name="inputPassword" class="form-control w-25">
+		<input type="text" placeholder="id를 입력하세요" name="inputId" class="form-control w-25">
+		<input type="password" placeholder="비밀번호를 입력하세요" name="inputPassword" class="form-control w-25">
 		<button type="submit" class="btn btn-primary">로그인</button>
 	</form>
 </body>
